--- a/class-06/starter-code/c01/add-content.html
+++ b/class-06/starter-code/c01/add-content.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>Constructive &amp; Co.</title>
-        <link rel="stylesheet" href="css/c01.css" />
+        <link rel="stylesheet" href="starter-code/css/c01.css" />
     </head>
     <body>
         <h1>Constructive &amp; Co.</h1>
-        <script src="js/add-content.js"></script>
+        <script src="starter-code/c01/add-content.js"></script>
         <p>For all orders and inquiries please call
             <em>555-3344</em></p>
     </body>
